--- a/src/scss/modules/_index.scss
+++ b/src/scss/modules/_index.scss
@@ -20,11 +20,10 @@
 @import '_connect';
 @import '_fixed_background';
 @import '_footer';
-@import '_image_slider';
 @import '_meet_the_team';
-@import '_navigation';
 @import '_opportunities';
-@import '_our_philosophy';
 @import '_welcome_section';
-@import '_jumbotron';
+@import '_header';
+
+
 
