--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -5,6 +5,7 @@ html {
   background-color: $color-background;
   box-sizing: border-box;
   height: 100%;
+  scroll-behavior: smooth;
 }
 
 * {
@@ -34,49 +35,5 @@ img {
   max-width: 100%;
 }
 
-h1
 
-/////from main
 
-body {
-    font-size: 1rem;
-    padding: 0 0 2em 0;
-    font-family: 'Montserrat Alternates', Arial, Helvetica, sans-serif;
-
-    img {
-        display: block;
-        margin: 0 auto;
-        max-width: 100%;
-    }
-
-    .link {
-        display: inline-block;
-        margin: 1em 0;
-        padding: 1em;
-        color: $yellow;
-        background-color: $gray-dark;
-        text-decoration: none;
-    }
-
-    h1 {
-        font-family: 'Anton', Arial, Helvetica, sans-serif;
-    }
-}
-
-/* autoprefixer: ignore next */
-::placeholder {
-    color: gray;
-}
-
-.test1 {
-    user-select: none;
-}
-
-.test2 {
-    display: grid;
-    user-select: none;
-}
-
-.padding{
-  padding: 2rem;
-}
