--- a/src/scss/modules/_footer.scss
+++ b/src/scss/modules/_footer.scss
@@ -1,4 +1,25 @@
 .footer{
     padding-top: 2rem;
+    background-color: #2e2e2e;
+
+    .border-1{
+        border-bottom: 1px solid #fff;
+        padding: 20px 0;
+    margin: 0px 0px 30px;
+    }
+
+    .border-2{
+        border-top: 1px solid #fff;
+        border-bottom: 1px solid #fff;
+        padding: 20px 0px;
+        margin: 30px 0px;
+    }
+
+    .border-3{
+        border-top: 1px solid #fff;
+        border-bottom: 1px solid #fff;
+        padding: 20px 0px;
+        margin: 30px 0px;
+    }
 }
 
