--- a/src/scss/modules/_opportunities.scss
+++ b/src/scss/modules/_opportunities.scss
@@ -1,15 +1,47 @@
-.articles{
-    .html5{
-        color: #e54d26;
+.margin_bottom{
+    margin-bottom: 6rem;
     }
-    .bootstrap4{
-        color: #563d7c;
+
+.margin_top{
+    margin-top: 5rem;
     }
-    .css3{
-        color: #2163af;
+
+.size-example{
+    @include media-breakpoint-up(xl){
+
+    // height: 150px;
+    padding: 25px 12.5px;
+        
     }
-    .fontsize{
-        font-size: 4em;
-        margin: 1rem;
+   
+    padding: 25px 12.5px;
+    width: 100%;
+    height: 100%;
+    border: 1px solid #adadad;
+    border-radius: 20px;
+    margin: 5px;
+    cursor: pointer;
+    transition: 0.5s;
+
+    &:hover{
+        -webkit-box-shadow: 1px 0px 31px -7px rgba(0,0,0,0.75);
+        -moz-box-shadow: 1px 0px 31px -7px rgba(0,0,0,0.75);
+        box-shadow: 1px 0px 31px -7px rgba(0,0,0,0.75);
+        transition: 0.2s;
+    }
+
+  
+
+}
+
+.article{
+    font-size: 2.5rem;
+    color: rgb(249, 71, 83);
+
+    }
+
+.margin_bottom{
+    @include media-breakpoint-down(md){
+        margin-bottom: 3rem;
     }
 }
