--- a/src/scss/modules/_welcome_section.scss
+++ b/src/scss/modules/_welcome_section.scss
@@ -2,6 +2,7 @@
     width: 75%;
     margin: 0 auto;
     padding-top: 2rem;
+    scroll-margin: 100px 0 0 50px;
 hr{
     border-top: 2px solid #b4b4b4b4;
     width: 95%;
