--- a/src/scss/utilities/_fonts.scss
+++ b/src/scss/utilities/_fonts.scss
@@ -12,23 +12,25 @@
         font-family: map-get(map-get($typefaces, $file), family);
         font-style: map-get(map-get($typefaces, $file), style);
         font-weight: map-get(map-get($typefaces, $file), weight);
-        src:    url('../fonts/Anton-Regular.eot');
-        src:    url('../fonts/#{$file}.eot?#iefix') format('embedded-opentype'),
-                url('../fonts/#{$file}.ttf') format('truetype'),
-                url('../fonts/#{$file}.woff2') format('woff2'),
-                url('../fonts/#{$file}.woff') format('woff'),
-                url('../fonts/#{$file}.svg##{$file}') format('svg');
+             src: url('../fonts/#{$file}.woff') format('woff');
+            
       }
     }
   }
 
   @font-face {
-    font-family: 'Anton';
-    src: url('../fonts/Anton-Regular.eot');
-    src: url('../fonts/Anton-Regular.eot?#iefix') format('embedded-opentype'),
-        url('../fonts/Anton-Regular.woff2') format('woff2'),
-        url('../fonts/Anton-Regular.woff') format('woff'),
-        url('../fonts/Anton-Regular.svg#Anton-Regular') format('svg');
+    font-family: 'OpenSans-Regular';
+    src: url('../fonts/OpenSans-Regular.woff') format('woff');
     font-weight: normal;
     font-style: normal;
+    font-display: swap;
 }
+
+@font-face {
+    font-family: 'OpenSans-Bold';
+    src: url('../fonts/OpenSans-Bold.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+
