--- a/src/scss/modules/_fixed_background.scss
+++ b/src/scss/modules/_fixed_background.scss
@@ -1,10 +1,16 @@
 .fun{
     border: 1px solid #000;
-    width: 100%;
+    width: 50%;
     padding: 10px;
+    display: flex;
+    justify-content: center;
+    margin: 0px auto;
     text-transform: capitalize;
     margin-bottom: 2rem;
     transition: 0.2s ease-in-out;
+
+   
+    
 
     &:hover{
         background: #2e2e2e;
